moblieX_pigeon/k8s/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
    dash.ulagbulag.io/subject: mobilex-exp
spec:
  selector:
    matchLabels:
      app: backend
      dash.ulagbulag.io/subject: mobilex-exp
  template:
    metadata:
      labels:
        app: backend
        dash.ulagbulag.io/subject: mobilex-exp
    spec:
      containers:
        - name: server
          # TODO(user): change to your image
          image: docker.io/kyle6011805/mobilex-exp-backend:v0.1
          ports:
            - name: http
              protocol: TCP
              containerPort: 8000
          
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
    dash.ulagbulag.io/subject: mobilex-exp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: openai
# stringData:
#   # TODO(user): change your own token!
#   OPENAI_API_KEY: "깃허브 커밋이 안되서 안넣겠습니다."
